exports[`use all parts of svg-edit > check tool_source_set #0`] = `
<svg
  xmlns="http://www.w3.org/2000/svg"
  xmlns:svg="http://www.w3.org/2000/svg"
  width="640"
  height="480"
  id="svgcontent"
  overflow="visible"
  x="640"
  y="480"
  viewBox="0 0 640 480"
>
  <g class="layer"><title>Layer 1</title></g>
</svg>
`;

exports[`use all parts of svg-edit > check tool_circle #0`] = `
<svg
  xmlns="http://www.w3.org/2000/svg"
  xmlns:svg="http://www.w3.org/2000/svg"
  width="640"
  height="480"
  id="svgcontent"
  overflow="visible"
  x="640"
  y="480"
  viewBox="0 0 640 480"
>
  <g class="layer" style="pointer-events:all">
    <title style="pointer-events:inherit">Layer 1</title>
    <circle
      fill="#FF0000"
      stroke="#000000"
      stroke-width="5"
      opacity="0.5"
      style="pointer-events:inherit"
      cx="150"
      cy="150"
      r="111.80339887498948"
      id="svg_1"
    >
      <animate
        attributeName="opacity"
        begin="indefinite"
        dur="0.2"
        fill="freeze"
        to="1"
      ></animate>
    </circle>
  </g>
</svg>
`;

exports[`use all parts of svg-edit > check tool_fhellipse #0`] = `
<svg
  xmlns="http://www.w3.org/2000/svg"
  xmlns:svg="http://www.w3.org/2000/svg"
  width="640"
  height="480"
  id="svgcontent"
  overflow="visible"
  x="640"
  y="480"
  viewBox="0 0 640 480"
>
  <g class="layer" style="pointer-events:all">
    <title style="pointer-events:inherit">Layer 1</title>
    <circle
      fill="#FF0000"
      stroke="#000000"
      stroke-width="5"
      style="pointer-events:inherit"
      cx="150"
      cy="150"
      r="111.80339887498948"
      id="svg_1"
      fill-opacity="1"
      stroke-opacity="1"
    ></circle>
    <ellipse
      fill="#FF0000"
      stroke="#000000"
      stroke-width="5"
      opacity="0.5"
      style="pointer-events:inherit"
      cx="299"
      cy="169"
      rx="60"
      ry="50"
      id="svg_2"
    >
      <animate
        attributeName="opacity"
        begin="indefinite"
        dur="0.2"
        fill="freeze"
        to="1"
      ></animate>
    </ellipse>
  </g>
</svg>
`;

exports[`use all parts of svg-edit > check tool_ellipse #0`] = `
<svg
  xmlns="http://www.w3.org/2000/svg"
  xmlns:svg="http://www.w3.org/2000/svg"
  width="640"
  height="480"
  id="svgcontent"
  overflow="visible"
  x="640"
  y="480"
  viewBox="0 0 640 480"
>
  <g class="layer" style="pointer-events:all">
    <title style="pointer-events:inherit">Layer 1</title>
    <circle
      fill="#FF0000"
      stroke="#000000"
      stroke-width="5"
      style="pointer-events:inherit"
      cx="150"
      cy="150"
      r="111.80339887498948"
      id="svg_1"
      fill-opacity="1"
      stroke-opacity="1"
    ></circle>
    <ellipse
      fill="#FF0000"
      stroke="#000000"
      stroke-width="5"
      style="pointer-events:inherit"
      cx="299"
      cy="169"
      rx="60"
      ry="50"
      id="svg_2"
      fill-opacity="1"
      stroke-opacity="1"
    ></ellipse>
    <ellipse
      fill="#FF0000"
      stroke="#000000"
      stroke-width="5"
      opacity="0.5"
      style="pointer-events:inherit"
      cx="114"
      cy="189"
      rx="55"
      ry="25"
      id="svg_3"
    >
      <animate
        attributeName="opacity"
        begin="indefinite"
        dur="0.2"
        fill="freeze"
        to="1"
      ></animate>
    </ellipse>
  </g>
</svg>
`;

exports[`use all parts of svg-edit > check tool_circle_change_fill_color #0`] = `
<svg
  xmlns="http://www.w3.org/2000/svg"
  xmlns:svg="http://www.w3.org/2000/svg"
  width="640"
  height="480"
  id="svgcontent"
  overflow="visible"
  x="640"
  y="480"
  viewBox="0 0 640 480"
>
  <g class="layer" style="pointer-events:all">
    <title style="pointer-events:inherit">Layer 1</title>
    <circle
      fill="#FF0000"
      stroke="#000000"
      stroke-width="5"
      style="pointer-events:inherit"
      cx="150"
      cy="150"
      r="111.80339887498948"
      id="svg_1"
      fill-opacity="1"
      stroke-opacity="1"
    ></circle>
    <ellipse
      fill="#ffff00"
      stroke="#000000"
      stroke-width="5"
      cx="299"
      cy="169"
      rx="60"
      ry="50"
      id="svg_2"
      fill-opacity="1"
      stroke-opacity="1"
    ></ellipse>
    <ellipse
      fill="#FF0000"
      stroke="#000000"
      stroke-width="5"
      style="pointer-events:inherit"
      cx="114"
      cy="189"
      rx="55"
      ry="25"
      id="svg_3"
      fill-opacity="1"
      stroke-opacity="1"
    ></ellipse>
  </g>
</svg>
`;

exports[`use all parts of svg-edit > check tool_circle_change_opacity #0`] = `
<svg
  xmlns="http://www.w3.org/2000/svg"
  xmlns:svg="http://www.w3.org/2000/svg"
  width="640"
  height="480"
  id="svgcontent"
  overflow="visible"
  x="640"
  y="480"
  viewBox="0 0 640 480"
>
  <g class="layer" style="pointer-events:all">
    <title style="pointer-events:inherit">Layer 1</title>
    <circle
      fill="#FF0000"
      stroke="#000000"
      stroke-width="5"
      style="pointer-events:inherit"
      cx="150"
      cy="150"
      r="111.80339887498948"
      id="svg_1"
      fill-opacity="1"
      stroke-opacity="1"
    ></circle>
    <ellipse
      fill="#ffff00"
      stroke="#000000"
      stroke-width="5"
      cx="299"
      cy="169"
      rx="60"
      ry="50"
      id="svg_2"
      fill-opacity="1"
      stroke-opacity="1"
      opacity="0.5"
    ></ellipse>
    <ellipse
      fill="#FF0000"
      stroke="#000000"
      stroke-width="5"
      style="pointer-events:inherit"
      cx="114"
      cy="189"
      rx="55"
      ry="25"
      id="svg_3"
      fill-opacity="1"
      stroke-opacity="1"
    ></ellipse>
  </g>
</svg>
`;

exports[`use all parts of svg-edit > check tool_ellipse_change_rotation #0`] = `
<svg
  xmlns="http://www.w3.org/2000/svg"
  xmlns:svg="http://www.w3.org/2000/svg"
  width="640"
  height="480"
  id="svgcontent"
  overflow="visible"
  x="640"
  y="480"
  viewBox="0 0 640 480"
>
  <g class="layer" style="pointer-events:all">
    <title style="pointer-events:inherit">Layer 1</title>
    <circle
      fill="#FF0000"
      stroke="#000000"
      stroke-width="5"
      style="pointer-events:inherit"
      cx="150"
      cy="150"
      r="111.80339887498948"
      id="svg_1"
      fill-opacity="1"
      stroke-opacity="1"
    ></circle>
    <ellipse
      fill="#ffff00"
      stroke="#000000"
      stroke-width="5"
      cx="299"
      cy="169"
      rx="60"
      ry="50"
      id="svg_2"
      fill-opacity="1"
      stroke-opacity="1"
      opacity="0.5"
    ></ellipse>
    <ellipse
      fill="#FF0000"
      stroke="#000000"
      stroke-width="5"
      cx="114"
      cy="189"
      rx="55"
      ry="25"
      id="svg_3"
      fill-opacity="1"
      stroke-opacity="1"
      transform="rotate(25 114 189)"
    ></ellipse>
  </g>
</svg>
`;

exports[`use all parts of svg-edit > check tool_ellipse_change_cx_cy_coordinate #0`] = `
<svg
  xmlns="http://www.w3.org/2000/svg"
  xmlns:svg="http://www.w3.org/2000/svg"
  width="640"
  height="480"
  id="svgcontent"
  overflow="visible"
  x="640"
  y="480"
  viewBox="0 0 640 480"
>
  <g class="layer" style="pointer-events:all">
    <title style="pointer-events:inherit">Layer 1</title>
    <circle
      fill="#FF0000"
      stroke="#000000"
      stroke-width="5"
      style="pointer-events:inherit"
      cx="150"
      cy="150"
      r="111.80339887498948"
      id="svg_1"
      fill-opacity="1"
      stroke-opacity="1"
    ></circle>
    <ellipse
      fill="#ffff00"
      stroke="#000000"
      stroke-width="5"
      cx="299"
      cy="169"
      rx="60"
      ry="50"
      id="svg_2"
      fill-opacity="1"
      stroke-opacity="1"
      opacity="0.5"
    ></ellipse>
    <ellipse
      fill="#FF0000"
      stroke="#000000"
      stroke-width="5"
      cx="139"
      cy="214"
      rx="55"
      ry="25"
      id="svg_3"
      fill-opacity="1"
      stroke-opacity="1"
      filter="url(#svg_3_blur)"
      transform="rotate(25 139 214)"
    ></ellipse>
  </g>
  <defs>
    <filter id="svg_3_blur">
      <feGaussianBlur in="SourceGraphic" stdDeviation="1"></feGaussianBlur>
    </filter>
  </defs>
</svg>
`;

exports[`use all parts of svg-edit > check tool_ellipse_change_rx_ry_radius #0`] = `
<svg
  xmlns="http://www.w3.org/2000/svg"
  xmlns:svg="http://www.w3.org/2000/svg"
  width="640"
  height="480"
  id="svgcontent"
  overflow="visible"
  x="640"
  y="480"
  viewBox="0 0 640 480"
>
  <g class="layer" style="pointer-events:all">
    <title style="pointer-events:inherit">Layer 1</title>
    <circle
      fill="#FF0000"
      stroke="#000000"
      stroke-width="5"
      style="pointer-events:inherit"
      cx="150"
      cy="150"
      r="111.80339887498948"
      id="svg_1"
      fill-opacity="1"
      stroke-opacity="1"
    ></circle>
    <ellipse
      fill="#ffff00"
      stroke="#000000"
      stroke-width="5"
      cx="299"
      cy="169"
      rx="60"
      ry="50"
      id="svg_2"
      fill-opacity="1"
      stroke-opacity="1"
      opacity="0.5"
    ></ellipse>
    <ellipse
      fill="#FF0000"
      stroke="#000000"
      stroke-width="5"
      cx="139"
      cy="214"
      rx="80"
      ry="50"
      id="svg_3"
      fill-opacity="1"
      stroke-opacity="1"
      filter="url(#svg_3_blur)"
      transform="rotate(25 139 214)"
    ></ellipse>
  </g>
  <defs>
    <filter id="svg_3_blur">
      <feGaussianBlur in="SourceGraphic" stdDeviation="1"></feGaussianBlur>
    </filter>
  </defs>
</svg>
`;

exports[`use all parts of svg-edit > check tool_ellipse_bring_to_back #0`] = `
<svg
  xmlns="http://www.w3.org/2000/svg"
  xmlns:svg="http://www.w3.org/2000/svg"
  width="640"
  height="480"
  id="svgcontent"
  overflow="visible"
  x="640"
  y="480"
  viewBox="0 0 640 480"
>
  <g class="layer" style="pointer-events:all">
    <title style="pointer-events:inherit">Layer 1</title>
    <ellipse
      fill="#ffff00"
      stroke="#000000"
      stroke-width="5"
      cx="299"
      cy="169"
      rx="60"
      ry="50"
      id="svg_2"
      fill-opacity="1"
      stroke-opacity="1"
      opacity="0.5"
    ></ellipse>
    <circle
      fill="#FF0000"
      stroke="#000000"
      stroke-width="5"
      style="pointer-events:inherit"
      cx="150"
      cy="150"
      r="111.80339887498948"
      id="svg_1"
      fill-opacity="1"
      stroke-opacity="1"
    ></circle>
    <ellipse
      fill="#FF0000"
      stroke="#000000"
      stroke-width="5"
      cx="139"
      cy="214"
      rx="80"
      ry="50"
      id="svg_3"
      fill-opacity="1"
      stroke-opacity="1"
      filter="url(#svg_3_blur)"
      transform="rotate(25 139 214)"
    ></ellipse>
  </g>
  <defs>
    <filter id="svg_3_blur">
      <feGaussianBlur in="SourceGraphic" stdDeviation="1"></feGaussianBlur>
    </filter>
  </defs>
</svg>
`;

exports[`use all parts of svg-edit > check tool_ellipse_bring_to_front #0`] = `
<svg
  xmlns="http://www.w3.org/2000/svg"
  xmlns:svg="http://www.w3.org/2000/svg"
  width="640"
  height="480"
  id="svgcontent"
  overflow="visible"
  x="640"
  y="480"
  viewBox="0 0 640 480"
>
  <g class="layer" style="pointer-events:all">
    <title style="pointer-events:inherit">Layer 1</title>
    <circle
      fill="#FF0000"
      stroke="#000000"
      stroke-width="5"
      style="pointer-events:inherit"
      cx="150"
      cy="150"
      r="111.80339887498948"
      id="svg_1"
      fill-opacity="1"
      stroke-opacity="1"
    ></circle>
    <ellipse
      fill="#FF0000"
      stroke="#000000"
      stroke-width="5"
      cx="139"
      cy="214"
      rx="80"
      ry="50"
      id="svg_3"
      fill-opacity="1"
      stroke-opacity="1"
      filter="url(#svg_3_blur)"
      transform="rotate(25 139 214)"
    ></ellipse>
    <ellipse
      fill="#ffff00"
      stroke="#000000"
      stroke-width="5"
      cx="299"
      cy="169"
      rx="60"
      ry="50"
      id="svg_2"
      fill-opacity="1"
      stroke-opacity="1"
      opacity="0.5"
    ></ellipse>
  </g>
  <defs>
    <filter id="svg_3_blur">
      <feGaussianBlur in="SourceGraphic" stdDeviation="1"></feGaussianBlur>
    </filter>
  </defs>
</svg>
`;

exports[`use all parts of svg-edit > check tool_ellipse_clone #0`] = `
<svg
  xmlns="http://www.w3.org/2000/svg"
  xmlns:svg="http://www.w3.org/2000/svg"
  width="640"
  height="480"
  id="svgcontent"
  overflow="visible"
  x="640"
  y="480"
  viewBox="0 0 640 480"
>
  <g class="layer" style="pointer-events:all">
    <title style="pointer-events:inherit">Layer 1</title>
    <circle
      fill="#FF0000"
      stroke="#000000"
      stroke-width="5"
      style="pointer-events:inherit"
      cx="150"
      cy="150"
      r="111.80339887498948"
      id="svg_1"
      fill-opacity="1"
      stroke-opacity="1"
    ></circle>
    <ellipse
      fill="#FF0000"
      stroke="#000000"
      stroke-width="5"
      cx="139"
      cy="214"
      rx="80"
      ry="50"
      id="svg_3"
      fill-opacity="1"
      stroke-opacity="1"
      filter="url(#svg_3_blur)"
      transform="rotate(25 139 214)"
    ></ellipse>
    <ellipse
      fill="#ffff00"
      stroke="#000000"
      stroke-width="5"
      cx="299"
      cy="169"
      rx="60"
      ry="50"
      id="svg_2"
      fill-opacity="1"
      stroke-opacity="1"
      opacity="0.5"
    ></ellipse>
    <ellipse
      fill="#ffff00"
      stroke="#000000"
      stroke-width="5"
      cx="319"
      cy="189"
      rx="60"
      ry="50"
      fill-opacity="1"
      stroke-opacity="1"
      opacity="0.5"
      id="svg_4"
    ></ellipse>
  </g>
  <defs>
    <filter id="svg_3_blur">
      <feGaussianBlur in="SourceGraphic" stdDeviation="1"></feGaussianBlur>
    </filter>
  </defs>
</svg>
`;

exports[`use all parts of svg-edit > check tool_ellipse_change_blur #0`] = `
<svg
  xmlns="http://www.w3.org/2000/svg"
  xmlns:svg="http://www.w3.org/2000/svg"
  width="640"
  height="480"
  id="svgcontent"
  overflow="visible"
  x="640"
  y="480"
  viewBox="0 0 640 480"
>
  <g class="layer" style="pointer-events:all">
    <title style="pointer-events:inherit">Layer 1</title>
    <circle
      fill="#FF0000"
      stroke="#000000"
      stroke-width="5"
      style="pointer-events:inherit"
      cx="150"
      cy="150"
      r="111.80339887498948"
      id="svg_1"
      fill-opacity="1"
      stroke-opacity="1"
    ></circle>
    <ellipse
      fill="#ffff00"
      stroke="#000000"
      stroke-width="5"
      cx="299"
      cy="169"
      rx="60"
      ry="50"
      id="svg_2"
      fill-opacity="1"
      stroke-opacity="1"
      opacity="0.5"
    ></ellipse>
    <ellipse
      fill="#FF0000"
      stroke="#000000"
      stroke-width="5"
      cx="114"
      cy="189"
      rx="55"
      ry="25"
      id="svg_3"
      fill-opacity="1"
      stroke-opacity="1"
      transform="rotate(25 114 189)"
      filter="url(#svg_3_blur)"
    ></ellipse>
  </g>
  <defs>
    <filter id="svg_3_blur" x="-50%" y="-50%" width="200%" height="200%">
      <feGaussianBlur in="SourceGraphic" stdDeviation="5"></feGaussianBlur>
    </filter>
  </defs>
</svg>
`;
